# cognitive_workflow_kit

./: .bazelrc  MODULE.bazel  README.md  WORKSPACE  bazel_wrapper.sh  experiment_params.py  pyproject.toml  setup.py
bazel/: BUILD  librosa.BUILD  pcre.BUILD  soundfile.BUILD  swig.BUILD
data/format/: BUILD  BUILD.org  data.drawio  data.proto  example.proto  speech_data.proto  speech_data_helper.py  speech_data_helper_test.py  text_data.proto
data/operation/: BUILD  dataset_op_params.py  text_codec.py  text_codec_params.py  text_codec_test.py  tf2_dataset_op.py  tf2_dataset_op_test.py  tf2_dataset_operation.py
data/source/: BUILD  audio.py  ex00.py
layer/tensorflow/: BUILD  attention.py  attention_test.py  conformer_block_layer.proto  conformer_block_layer.py  conformer_block_layer_test.py  debug.py  distribution_normalization_layer.py  distribution_normalization_layer_test.py  (+24 more)
math/: math_util.py
math_lib/: BUILD  math_util.py  utils.py  utils_test.py
operation/: BUILD  README.md  operation.py  operation_params.py
run/: BUILD  bert_finetuning.py  bert_inference.py  result  result2  sample_util.py  setup.sh  wav2vec_finetuning.py  wav2vec_finetuning_libri_light.py  wav2vec_finetuning_new.py  wav2vec_finetuning_shc.py  wav2vec_inference.py
signal_processing/: channel_weighting_resynthesis.py  channel_weighting_resynthesis_org.py  main.py
tool/: BUILD  README.md  class_dia.dia  convert_to_tfrecord.py  convert_to_tfrecord_libri_light.py  convert_to_tfrecord_librispeech.py  create_aihub_webdataset.py  create_aihub_webdataset_ver2.py  create_librispeech_webdataset.py  create_librispeech_webdataset_test.py  create_stop_webdataset.py  process.py  process_vocab.py  select_test_subset.py  stop_music_train_11562.txt  stop_music_train_11563.txt  stop_test_0_music_random_300.txt  test_create_aihub_webdataset.sh  vocab.json  wav2vec_huggingface.py
(+59 files in other folders)
