###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "cognitive_workflow_kit",
    version = "0.1",
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_proto", version = "7.1.0")
#bazel_dep(name = "rules_proto_grpc", version = "5.0.1")
bazel_dep(name = "rules_python", version = "1.3.0")
bazel_dep(name = "protobuf", version = "29.0-rc2") #, repo_name = "com_google_protobuf")


python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
python.toolchain(python_version = "3.11")

# Adopted from https://rules-python.readthedocs.io/en/latest/pypi-dependencies.html#using-bzlmod
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "my_deps",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)

use_repo(pip, "my_deps")


